--- a/_config.yml
+++ b/_config.yml
@@ -5,10 +5,11 @@ description: >-
 baseurl: "" # Leave this blank for user.github.io sites
 url: "https://BabyaleSandra.github.io"
 
-theme: "minimal-mistakes-jekyll"
-
+remote_theme: "mmistakes/minimal-mistakes@4.24.0"
 plugins:
+  - jekyll-remote-theme
   - jekyll-include-cache
+
 
 author:
   name: "Sandra R. Babyale"
