--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ include:
 
 author:
   name: "Sandra R. Babyale"
-  avatar: "/assets/images/profile.png"
+  avatar: "/assets/images/profile_pic.jpg"
   bio: "PhD researcher in wildfire smoke modeling, data assimilation, and computational mathematics."
 
   location: "Boise, ID"
