--- a/_config.yml
+++ b/_config.yml
@@ -29,8 +29,8 @@ author:
   bio: "PhD researcher in wildfire smoke modeling, data assimilation, and computational mathematics."
 
   location: "Boise, ID"
-  email: "sandrababyale@gmail.com"
+  email: "sandrababyale@boisestate.edu"
   github: "BabyaleSandra"
   scholar: "your-scholar-id"  # optional
-  orcid: "your-orcid-id"      # optional
+  orcid: "0009-0002-2430-8360"     
   
