--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-remote_theme:  "mmistakes/minimal-mistakes@4.24.0"
+remote_theme: "mmistakes/minimal-mistakes@4.24.0"
 plugins:
   - jekyll-remote-theme
   - jekyll-include-cache
@@ -7,18 +7,22 @@ collections:
   projects:
     output: true
     permalink: /projects/:path/
+  publications:
+    output: true
+    permalink: /publications/:path/
 
-navigation:
-  - title: "Home"
-    url: /
-  - title: "Projects"
-    url: /projects/
+# Main navigation
+main:
+  - title: "Publications"
+    url: /publications/
+  - title: "Presentations"
+    url: /presentations/
+  - title: "Teaching"
+    url: /teaching/
   - title: "CV"
     url: /cv/
-  - title: "Blog"
-    url: /blog/
-  - title: "Contact"
-    url: /contact/
+  - title: "Students"
+    url: /students/
 
 include:
   - _pages
@@ -27,10 +31,135 @@ author:
   name: "Sandra R. Babyale"
   avatar: "/assets/images/profile_pic.jpg"
   bio: "PhD researcher in wildfire smoke modeling, data assimilation, and computational mathematics."
-
   location: "Boise, ID"
   email: "sandrababyale@boisestate.edu"
   github: "BabyaleSandra"
   scholar: "your-scholar-id"  # optional
-  orcid: "0009-0002-2430-8360"     
-  
+  orcid: "0009-0002-2430-8360"
+
+# Site settings
+title: "Sandra R. Babyale"
+description: "PhD researcher in wildfire smoke modeling, data assimilation, and computational mathematics"
+url: "https://babyalesandra.github.io"  # Update with your actual URL
+baseurl: ""
+
+# SEO settings
+locale: "en-US"
+title_separator: "-"
+
+# Reading Files
+include:
+  - .htaccess
+  - _pages
+exclude:
+  - "*.sublime-project"
+  - "*.sublime-workspace"
+  - vendor
+  - .asset-cache
+  - .bundle
+  - .jekyll-assets-cache
+  - .sass-cache
+  - assets/js/plugins
+  - assets/js/_main.js
+  - assets/js/vendor
+  - Capfile
+  - CHANGELOG
+  - config
+  - Gemfile
+  - Gruntfile.js
+  - gulpfile.js
+  - LICENSE
+  - log
+  - node_modules
+  - package.json
+  - Rakefile
+  - README
+  - tmp
+
+# Conversion
+markdown: kramdown
+highlighter: rouge
+lsi: false
+excerpt_separator: "\n\n"
+incremental: false
+
+# Markdown Processing
+kramdown:
+  input: GFM
+  hard_wrap: false
+  auto_ids: true
+  footnote_nr: 1
+  entity_output: as_char
+  toc_levels: 1..6
+  smart_quotes: lsquo,rsquo,ldquo,rdquo
+  enable_coderay: false
+
+# Sass/SCSS
+sass:
+  sass_dir: _sass
+  style: compressed
+
+# Outputting
+permalink: /:categories/:title/
+paginate: 5
+paginate_path: /page:num/
+timezone: America/Boise
+
+# Plugins
+plugins:
+  - jekyll-paginate
+  - jekyll-sitemap
+  - jekyll-gist
+  - jekyll-feed
+  - jekyll-include-cache
+
+# mimic GitHub Pages with --safe
+whitelist:
+  - jekyll-paginate
+  - jekyll-sitemap
+  - jekyll-gist
+  - jekyll-feed
+  - jekyll-include-cache
+
+# HTML Compression
+compress_html:
+  clippings: all
+  ignore:
+    envs: development
+
+# Defaults
+defaults:
+  # _posts
+  - scope:
+      path: ""
+      type: posts
+    values:
+      layout: single
+      author_profile: true
+      read_time: true
+      comments: true
+      share: true
+      related: true
+  # _pages
+  - scope:
+      path: "_pages"
+      type: pages
+    values:
+      layout: single
+      author_profile: true
+  # _projects
+  - scope:
+      path: ""
+      type: projects
+    values:
+      layout: single
+      author_profile: true
+      share: true
+  # _publications
+  - scope:
+      path: ""
+      type: publications
+    values:
+      layout: single
+      author_profile: true
+      share: true
