--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,16 @@
 remote_theme: "mmistakes/minimal-mistakes@4.24.0"
-plugins:
-  - jekyll-remote-theme
-  - jekyll-include-cache
 
+# Site settings
+title: "Sandra R. Babyale"
+description: "PhD researcher in wildfire smoke modeling, data assimilation, and computational mathematics"
+url: "https://babyalesandra.github.io"
+baseurl: ""
+
+# SEO settings
+locale: "en-US"
+title_separator: "-"
+
+# Collections
 collections:
   projects:
     output: true
@@ -23,10 +31,10 @@ main:
     url: /cv/
   - title: "Students"
     url: /students/
+  - title: "Projects"
+    url: /projects/
 
-include:
-  - _pages
-
+# Author info
 author:
   name: "Sandra R. Babyale"
   avatar: "/assets/images/profile_pic.jpg"
@@ -37,20 +45,11 @@ author:
   scholar: "your-scholar-id"  # optional
   orcid: "0009-0002-2430-8360"
 
-# Site settings
-title: "Sandra R. Babyale"
-description: "PhD researcher in wildfire smoke modeling, data assimilation, and computational mathematics"
-url: "https://babyalesandra.github.io"  # Update with your actual URL
-baseurl: ""
-
-# SEO settings
-locale: "en-US"
-title_separator: "-"
-
 # Reading Files
 include:
   - .htaccess
   - _pages
+
 exclude:
   - "*.sublime-project"
   - "*.sublime-workspace"
@@ -107,11 +106,12 @@ timezone: America/Boise
 
 # Plugins
 plugins:
+  - jekyll-remote-theme
+  - jekyll-include-cache
   - jekyll-paginate
   - jekyll-sitemap
   - jekyll-gist
   - jekyll-feed
-  - jekyll-include-cache
 
 # mimic GitHub Pages with --safe
 whitelist:
