--- a/_config.yml
+++ b/_config.yml
@@ -38,3 +38,11 @@ defaults:
     values:
       sidebar:
         nav: ""
+
+plugins:
+  - jekyll-remote-theme
+  - jekyll-include-cache
+  - jekyll-paginate
+  - jekyll-sitemap
+  - jekyll-gist
+  - jekyll-feed
