--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-remote_theme: "mmistakes/minimal-mistakes@4.24.0"
+remote_theme: "mmistakes/minimal-mistakes"
 
 # Site settings
 title: "Sandra R. Babyale"
