--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,6 @@ collections:
     output: true
     permalink: /publications/:path/
 
-
 # Site navigation
 main:
   - title: "Home"
@@ -36,9 +35,10 @@ main:
     url: /students/
   - title: "Projects"
     url: /projects/
-    
+
 header:
   nav: "main"
+
 # Author info
 author:
   name: "Sandra R. Babyale"
@@ -109,7 +109,7 @@ paginate: 5
 paginate_path: /page:num/
 timezone: America/Boise
 
-# Plugins
+# Plugins (no whitelist block, only plugins)
 plugins:
   - jekyll-remote-theme
   - jekyll-include-cache
@@ -124,15 +124,14 @@ compress_html:
   ignore:
     envs: development
 
-# Defaults
+# Defaults (disable sidebar nav globally)
 defaults:
-  # _posts
   - scope:
       path: ""
     values:
       sidebar:
         nav: ""
-        
+
   - scope:
       path: ""
       type: posts
@@ -143,14 +142,14 @@ defaults:
       comments: true
       share: true
       related: true
-  # _pages
+
   - scope:
       path: "_pages"
       type: pages
     values:
       layout: single
       author_profile: true
-  # _projects
+
   - scope:
       path: ""
       type: projects
@@ -158,7 +157,7 @@ defaults:
       layout: single
       author_profile: true
       share: true
-  # _publications
+
   - scope:
       path: ""
       type: publications
